<resources>
    <string name="app_name">CoSinging</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_login_or_password">Forget password?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="delete_profile">Delete profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="exit">Exit</string>
    <string name="nickname">Nickname</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="about_me">About Me</string>
    <string name="go_back">Go Back</string>
    <string name="confirm">Confirm</string>
    <string name="chat">Chat</string>
</resources>