<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="8dp">

    <EditText
        android:id="@+id/edit_profile_about_me"
        android:layout_width="366dp"
        android:layout_height="143dp"
        android:background="#e3e1e1"
        android:ems="10"
        android:gravity="left|top"
        android:hint="@string/about_me"
        android:inputType="textMultiLine"
        android:maxLength="256"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_about_me_title" />

    <TextView
        android:id="@+id/edit_profile_about_me_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_phone_number" />

    <EditText
        android:id="@+id/edit_profile_phone_number"
        android:layout_width="370dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_phone_number_title" />

    <TextView
        android:id="@+id/edit_profile_phone_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_nickname" />

    <EditText
        android:id="@+id/edit_profile_nickname"
        android:layout_width="370dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_nickname_title" />

    <TextView
        android:id="@+id/edit_profile_nickname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_avatar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="CoSinging" />

    <ImageView
        android:id="@+id/edit_profile_avatar"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_toolbar"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/edit_profile_name"
        android:layout_width="227dp"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edit_profile_avatar"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_name_title" />

    <TextView
        android:id="@+id/edit_profile_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/edit_profile_avatar"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_toolbar" />

    <Button
        android:id="@+id/edit_profile_button_back"
        android:layout_width="176dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:text="@string/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_about_me" />

    <Button
        android:id="@+id/edit_profile_button_confirm"
        android:layout_width="176dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_about_me" />

</androidx.constraintlayout.widget.ConstraintLayout>