<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/musician_profile_information_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/information"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musician_profile_avatar" />

    <ImageView
        android:id="@+id/musician_profile_information_background"
        android:layout_width="354dp"
        android:layout_height="139dp"
        android:layout_marginTop="16dp"
        android:background="#e3e1e1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musician_profile_information_title" />

    <TextView
        android:id="@+id/musician_profile_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/musician_profile_information_background"
        app:layout_constraintEnd_toEndOf="@+id/musician_profile_information_background"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="@+id/musician_profile_information_background"
        app:layout_constraintTop_toTopOf="@+id/musician_profile_information_background"
        app:layout_constraintVertical_bias="0.016" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/musician_profile_toolbar"
        android:layout_width="match_parent"
        android:translationZ="6dp"
        android:elevation="10dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/musician_profile_favourite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:translationZ="6dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/musician_profile_avatar"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musician_profile_toolbar"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/musician_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="Vladimir Nazarov"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musician_profile_toolbar" />

    <TextView
        android:id="@+id/musician_profile_postbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="tooldiamond2014@gmail.com"
        app:layout_constraintStart_toEndOf="@+id/musician_profile_avatar"
        app:layout_constraintTop_toBottomOf="@+id/musician_profile_nickname" />

    <TextView
        android:id="@+id/musician_profile_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="/@vodka kun"
        app:layout_constraintStart_toEndOf="@+id/musician_profile_avatar"
        app:layout_constraintTop_toBottomOf="@+id/musician_profile_profession" />

    <TextView
        android:id="@+id/musician_profile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="+375 29 373 07 41"
        app:layout_constraintStart_toEndOf="@+id/musician_profile_avatar"
        app:layout_constraintTop_toBottomOf="@+id/musician_profile_postbox" />

    <Button
        android:id="@+id/musician_profile_chat"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:translationZ="6dp"
        android:elevation="10dp"
        android:text="@string/chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musician_profile_information_background" />

    <TextView
        android:id="@+id/musician_profile_profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/musician_profile_avatar"
        app:layout_constraintTop_toBottomOf="@+id/musician_profile_toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>